Added copy and delete buttons, need to fix UI

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "manifest_version": 3,
-    "name": "Code Snippet Manager",
+    "name": "Quick Snippet",
     "description": "A simple Chrome extension to manage code snippets.",
     "version": "1.0",
     "action": {
